# XMem

./: .gitignore  Dangerfile.js  LICENSE  README.md  benchmark.py  pyproject.toml  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: danger.yml  deploy-aws.yml  deploy-staging.yml  docker-build-check.yml  promote-to-production.yml
docs/: configuration.md
rust/xmem-weaver/: Cargo.toml  README.md
rust/xmem-weaver/src/: lib.rs  model.rs  parser.rs  storage.rs  weaver.rs
src/agents/: judge.py
src/api/routes/: admin.py  memory.py  scanner.py
src/config/: settings.py
src/database/: api_key_store.py
src/jobs/: durable.py
src/pipelines/: ingest.py
tests/: test_durable_jobs.py
tests/unit/: test_database_stores.py
xmem-go/: .env.example  .gitignore  README.md  go.mod  go.sum
xmem-go/cmd/benchmark/: main.go
xmem-go/cmd/xmem/: main.go
xmem-go/docker/: Dockerfile  docker-compose.dev.yml
xmem-go/docs/: configuration.md
xmem-go/internal/agents/: agents.go
xmem-go/internal/api/: middleware.go  server.go  server_test.go  types.go
xmem-go/internal/config/: config.go
xmem-go/internal/contracts/: types.go
xmem-go/internal/database/: api_keys.go  mongo.go
xmem-go/internal/graph/: memory.go  neo4j.go  types.go
xmem-go/internal/models/: models.go
xmem-go/internal/pipelines/: effort.go  effort_test.go  ingest.go  retrieval.go
xmem-go/internal/storage/: memory.go  openai.go  pinecone.go  types.go
xmem-go/internal/weaver/: types.go  weaver.go  weaver_test.go
