[package]
name = "xmem-weaver"
version = "0.1.0"
edition = "2021"
description = "Standalone deterministic XMem weaver core"
license = "MIT"

[lib]
name = "xmem_weaver"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
